Fixed bug where post link area was too large

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -29,6 +29,5 @@ $grey-color:       #828282 !default;
 }
 
 .post-link {
-    display: block;
     @include relative-font-size(1.5);
 }
